--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.profiles.active=smart
+hr.salary.limit1=2.5
+hr.salary.limit2=5
+hr.salary.limit3=10
+#az application.properties fájlt vette figyelembe
